# Image360

./: .gitignore  BUILD_REPORT.md  CLAUDE.md  CMakeLists.txt  README.md  WindowsApp.slnx  vcpkg.json
.github/workflows/: windows-engine-ci.yml
WindowsApp.Compute/: CMakeLists.txt  WindowsApp.Compute.vcxproj
WindowsApp.Compute/HeaderFiles/: ComputeTypes.h  CudaPipeline.h  IComputeBackend.h  IImageCodec.h  NvJpegCodec.h  color_transfer.cuh  demosaic.cuh  features.cuh  median_stack.cuh  tensor_ops.cuh
WindowsApp.Compute/SourceFiles/: CudaPipeline.cpp  NvJpegCodec.cpp  color_transfer.cu  demosaic.cu  features.cu  median_stack.cu  tensor_ops.cu
WindowsApp.Core/: CMakeLists.txt  WindowsApp.Core.vcxproj  pch.h
WindowsApp.Core/HeaderFiles/: AlignExecutor.h  BayerDemosaicKernels.h  BlockMatchAlignKernel.h  BriefDescriptorExtractor.h  BundleAdjustment.h  BurstAlignExecutor.h  BurstCommon.h  BurstMergeExecutor.h  CacheManager.h  CpuComputeBackend.h  CpuSimdDetect.h  ExposureFusionKernel.h  FastFeatureDetector.h  FeatureMatcher.h  GainColorOps.h  HomographyMath.h  ITaskExecutor.h  ImageLoader.h  JpegCodec.h  LinearSolve.h  MedianStackKernels.h  NightSightMotionMeter.h  OptimizeExecutor.h  OverlapCulling.h  PainterlyToneCurveKernel.h  PanoramaExporter.h  PipelineDriver.h  PlatformFile.h  ProjectManager.h  RansacHomography.h  RawIngestExecutor.h  RenderExecutor.h  RgbToGray.h  RobustMergeKernel.h  SeamBlendKernels.h  StorageEngine.h  StructureTensorMergeKernel.h  SubPixelRefineKernel.h  TaskScheduler.h  TextEncoding.h  (+5 more)
WindowsApp.Core/SourceFiles/: AlignExecutor.cpp  BayerDemosaic_Avx2.cpp  BayerDemosaic_Avx512.cpp  BayerDemosaic_Scalar.cpp  BlockMatchAlignKernel.cpp  BriefDescriptorExtractor.cpp  BundleAdjustment.cpp  BurstAlignExecutor.cpp  BurstMergeExecutor.cpp  CacheManager.cpp  CpuComputeBackend.cpp  CpuSimdDetect.cpp  ExposureFusionKernel.cpp  FastFeatureDetector.cpp  FeatureMatcher.cpp  GainColorOps.cpp  HomographyMath.cpp  ImageLoader.cpp  JpegCodec.cpp  LinearSolve.cpp  MedianStack_Avx2.cpp  MedianStack_Avx512.cpp  MedianStack_Scalar.cpp  NightSightMotionMeter.cpp  OptimizeExecutor.cpp  OverlapCulling.cpp  PainterlyToneCurveKernel.cpp  PanoramaExporter.cpp  PipelineDriver.cpp  PlatformFile.cpp  ProjectManager.cpp  RansacHomography.cpp  RawIngestExecutor.cpp  RenderExecutor.cpp  RgbToGray.cpp  RobustMergeKernel.cpp  SeamBlend.cpp  StorageEngine.cpp  StructureTensorMergeKernel.cpp  SubPixelRefineKernel.cpp  (+8 more)
WindowsApp.Core/libraw/: LibRaw.vcxproj
WindowsApp.Core/libraw/src/: libraw_c_api.cpp
WindowsApp.Core/stb/: stb_image_impl.cpp
WindowsApp.Tests/: BundleAdjustmentTests.cpp  ImageLoaderUnpackRawTests.cpp  OverlapCullingTests.cpp  PanoramaExporterTests.cpp  PipelineDriverTests.cpp  ProjectManagerTaskTests.cpp  RansacHomographyTests.cpp  StorageEngineTests.cpp  StubTaskExecutor.h  UnitTests.cpp  WindowsApp.Tests.vcxproj
WindowsApp.Vulkan/: CMakeLists.txt  WindowsApp.Vulkan.vcxproj
WindowsApp.Vulkan/HeaderFiles/: VulkanPipeline.h
WindowsApp.Vulkan/SourceFiles/: VulkanPipeline.cpp
WindowsApp.Vulkan/shaders/: apply_gain.comp  demosaic_bayer.comp  median_stack.comp  warp_perspective.comp
WindowsApp/WindowsApp/: App.xaml  App.xaml.cpp  App.xaml.h  ComputeBackendFactory.cpp  ComputeBackendFactory.h  MainWindow.idl  MainWindow.xaml  MainWindow.xaml.cpp  MainWindow.xaml.h  WindowsApp.vcxproj  app.manifest  packages.config  pch.h  readme.txt
WindowsApp/WindowsApp (Package)/: Package.appxmanifest  WindowsApp (Package).wapproj
WindowsApp/WindowsApp (Package)/AppPackages/WindowsApp (Package)_1.0.0.0_x64_Test/: Add-AppDevPackage.ps1  Install.ps1  WindowsApp (Package)_1.0.0.0_x64.msix
WindowsApp/WindowsApp (Package)/AppPackages/WindowsApp (Package)_1.0.0.0_x64_Test/Add-AppDevPackage.resources/cs-CZ/: Add-AppDevPackage.psd1
WindowsApp/WindowsApp (Package)/AppPackages/WindowsApp (Package)_1.0.0.0_x64_Test/Add-AppDevPackage.resources/de-DE/: Add-AppDevPackage.psd1
WindowsApp/WindowsApp (Package)/AppPackages/WindowsApp (Package)_1.0.0.0_x64_Test/Add-AppDevPackage.resources/es-ES/: Add-AppDevPackage.psd1
WindowsApp/WindowsApp (Package)/AppPackages/WindowsApp (Package)_1.0.0.0_x64_Test/Add-AppDevPackage.resources/fr-FR/: Add-AppDevPackage.psd1
WindowsApp/WindowsApp (Package)/AppPackages/WindowsApp (Package)_1.0.0.0_x64_Test/Add-AppDevPackage.resources/it-IT/: Add-AppDevPackage.psd1
WindowsApp/WindowsApp (Package)/AppPackages/WindowsApp (Package)_1.0.0.0_x64_Test/TelemetryDependencies/: LogSideloadingTelemetry.ps1
cli/: CMakeLists.txt  main.cpp
cmake/: EmbedShader.cmake
docs/: ARCHITECTURE.md  COMPUTATIONAL_PHOTOGRAPHY.md  WINDOWS_BUILD_SETUP.md
docs/superpowers/plans/: 2026-07-06-image-editor-screen.md  2026-07-07-align-stage.md  2026-07-07-nvjpeg-export.md  2026-07-07-optimize-stage.md  2026-07-07-raw-ingest.md  2026-07-07-real-project-creation-ui.md  2026-07-07-render-stage.md  2026-07-07-storage-engine.md  2026-07-07-task-scheduler-core.md  2026-07-07-ui-progress-nonblocking.md  2026-07-07-v2-architecture-roadmap.md  2026-07-07-vfp-project-schema.md  2026-07-21-burst-pipeline-foundation.md  2026-07-21-hdrplus-tile-fft-merge.md  2026-07-21-mfnr-block-match-merge.md  2026-07-21-superres-structure-tensor-merge.md  2026-07-22-cli-front-end.md  2026-07-22-night-sight.md  2026-07-22-winui-feature-management.md
scripts/: build.ps1  test.ps1
scripts/panorama_gen/: gen_scene.py  generate_all.py  make_dng.py  pyproject.toml
tests/engine_smoke/: CMakeLists.txt  main.cpp
tests/pipeline_e2e/: CMakeLists.txt  PipelineE2ETestSupport.h  main.cpp
tests/pipeline_e2e/fixtures/: tile_0.dng  tile_1.dng  tile_2.dng  tiles_meta.json
tests/pipeline_e2e_burst/: CMakeLists.txt  main.cpp
tests/pipeline_e2e_real_photos/: CMakeLists.txt  main.cpp
tests/pipeline_e2e_vulkan/: CMakeLists.txt  main.cpp
tests/raw_probe/: CMakeLists.txt  main.cpp
tests/render_blend/: CMakeLists.txt  main.cpp
tests/vulkan_smoke/: CMakeLists.txt  main.cpp
(+8 files in other folders)
